fix: Resolve all SonarQube violations
- Remove unnecessary public modifiers from test methods
- Fix logger format specifiers (replace {:.3f} with {} + String.format)
- Replace Thread.sleep() with proper async handling
- All 31 tests passing successfully

Ready for Jenkins Quality Gate validation